# OrderBookEngine

./: .dockerignore  .gitignore  DESIGN_DECISIONS.md  Dockerfile.engine  Dockerfile.subscriber  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/benchmarks/: latency_benchmark.cpp
cpp/bindings/: orderbook_bindings.cpp
cpp/include/: order.hpp  order_book.hpp  price_level.hpp  redis_publisher.hpp  trade.hpp  types.hpp
cpp/src/: main.cpp  order_book.cpp  price_level.cpp  redis_publisher.cpp
cpp/tests/: test_order.cpp  test_order_book.cpp  test_price_level.cpp
docs/: ARCHITECTURE.md  CODE_WALKTHROUGH.md  GLOSSARY.md  PYBIND11_GUIDE.md  TESTING_GUIDE.md
python/: backtest.py  binance_feed.py  requirements.txt  strategy.py  subscriber.py
